# chopsticks

./: .gitignore  README.md
backend/: backend.py  cpp_wrapper.py  game_status.py  ui_move_generator.py
chopsticks_ui/: index.html  package.json
chopsticks_ui/src/: App.css  App.tsx  Board.css  Board.tsx  Buttons.css  Buttons.tsx  ButtonsProps.ts  GameStatus.ts  HandNumber.ts  MoveType.ts  backend.ts
cpp_core/: meson.build
cpp_core/inc/: backend_conversion.hpp  controller.hpp  game.hpp  game_status.hpp  hands.hpp  min_max.hpp  play.hpp  player_status.hpp
cpp_core/src/: backend_conversion.cpp  controller.cpp  game.cpp  game_status.cpp  hands.cpp  min_max.cpp  play.cpp  player_status.cpp
cpp_core/tst/: command_line_game.cpp  other_test.cpp
